add bonus food with double points

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           type="text"
           id="playerNameInput"
           placeholder="Enter Name"
-          maxlength="10"
+          class="w-full"
         />
         <button
           id="messageButton"
